src/ProjectOne.css
/*GRIDS AND LAYOUT*/
.genesis-container {
  width: 100%;
}

.genesis-container img {
  width: 100%;
  height: 100%;
  object-fit: contain;
  width: minmax(300px, 40vw);
  object-position: bottom;
}

.genesis-content {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(472px, max-content));
  align-items: end;
  column-gap: 1em;
  max-width: 2000px;
}

.genesis-text {
  width: 80%;
  max-width: 900px;
}

.genesis-big-text {
  width: 70%;
  max-width: 900px;
}

.scope-description {
  width: 65ch;
}

.initial-focus img {
  width: 40%;
  object-fit: contain;
  justify-self: center;
  max-width: 200px;
}

.initial-focus figure {
  display: grid;
  max-width: 400px;
  align-items: start;
  text-align: center;
  grid-template-rows: max-content max-content;
  row-gap: 1em;
}

.initial-focus .subsection-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
  width: 100%;
  column-gap: 2em;
  row-gap: 4em;
  max-width: 2000px;
  /* text-wrap: balance; */
}

.research-questions img {
  width: 50%;
  height: 100%;
  object-fit: contain;
  justify-self: center;
}

.question-category {
  display: grid;
  max-width: 400px;
  text-align: center;
  grid-template-rows: max-content max-content max-content;
}

.research-questions .subsection-grid {
  display: grid;
  grid-template-columns: repeat(3, minmax(220px, 1fr));
  column-gap: 2em;
  row-gap: 2em;
  max-width: 2000px;
}

.research-questions ul {
  list-style: none;
  margin: 0;
  text-wrap: balance;
}

.emerging-focus img {
  width: 40%;
  object-fit: cover;
  justify-self: center;
}

.emerging-focus p {
  width: 100%;
  /* text-wrap: balance; */
  max-width: 500px;
}

.opportunity {
  display: grid;
  justify-items: center;
  text-align: center;
  align-items: start;
  grid-template-rows: max-content max-content max-content;
}

.emerging-focus .subsection-grid {
  display: grid;
  grid-template-columns: repeat(3, minmax(240px, 1fr));
  column-gap: 6em;
  max-width: 2000px;
}

.approach-content {
  display: grid;
  grid-template-columns: repeat(2, minmax(300px, max-content));
  column-gap: 4em;
  row-gap: 2em;
}

.approach-container h4 {
  width: 70%;
  min-width: 256px;
}

.methodology-content {
  width: 100%;
  max-width: 2000px;
}

.methodology-content img {
  display: block;
  margin: auto;
  width: 88%;
  object-fit: contain;
}

.approach-content p {
  max-width: 45ch;
}

.takeaways-container ul {
  max-width: 55ch;
}

/*TYPOGRAPHY*/
.p1-container .section-title {
  font-family: var(--header-font);
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0.08em;
}

.scope-content h3 {
  font-family: var(--header-font);
  font-weight: 550;
  text-transform: uppercase;
  font-size: var(--body);
}

.genesis-big-text {
  font-family: var(--body-font);
  font-size: var(--h1);
  font-weight: 220;
  line-height: 1.09;
  color: rgb(72, 131, 219);
  padding-top: 0.25em;
}

.genesis-text,
.initial-focus figcaption,
.takeaways-container ul {
  font-family: var(--body-font);
  font-size: var(--body);
  line-height: 1.2;
}

.scope-description {
  font-family: var(--body-font);
  font-size: var(--medium-small);
}

.research-questions h4,
.approach-container h4 {
  font-family: var(--body-font);
  font-size: var(--h4);
  line-height: 1.09;
}

.research-questions ul,
.approach-container p,
.emerging-focus p {
  font-family: var(--body-font);
  font-size: var(--medium-small);
  line-height: 1.25;
}

.emerging-focus h4 {
  font-family: var(--header-font);
  font-size: var(--h4);
  font-weight: 420;
}

/*SPACING*/
.p1-container {
  max-width: 2000px;
  margin-inline: auto;
}

.p1-container .section {
  padding-bottom: clamp(8rem, 16%, 100px);
}

.genesis-container {
  padding-top: clamp(8rem, 16%, 100px);
}

.scope-description,
.intro-p1 {
  padding-top: clamp(1rem, 2%, 20px);
}

.intro-p1 {
  padding-bottom: 0.5em;
}

.subsection-h3 {
  padding-top: clamp(4rem, 8%, 60px);
  padding-bottom: clamp(1rem, 2%, 20px);
}

.research-questions h4,
.approach-container h4 {
  padding-bottom: 0.5em;
}

.research-questions li {
  padding-bottom: 0.25em;
}

.genesis-container .section-title,
.approach-container .section-title,
.methodology-container .section-title,
.takeaways-container .section-title {
  padding-bottom: clamp(1.85rem, 3.5%, 36px);
}

.emerging-focus h4 {
  padding-top: clamp(1rem, 2%, 20px);
  padding-bottom: clamp(0.5rem, 1%, 10px);
}

.takeaways-container li {
  padding-bottom: 1em;
}

/*ORNAMENTS*/
.section-title {
  position: relative;
}

.section-title::before {
  content: "";
  height: 4.2px;
  width: 1.85em;
  position: absolute;
  top: -10px;
  left: 2px;
  background-color: rgb(0, 0, 0);
}

.initial-focus span,
.research-questions span {
  font-weight: 700;
  color: rgb(72, 131, 219);
}

.emerging-focus span {
  font-weight: 700;
}

.approach-content p::after {
  content: ".";
}

@media screen and (max-width: 1042px) {
  .genesis-container img {
    object-position: center;
    justify-self: center;
  }

  .genesis-container {
    position: relative;
    width: 100%;
  }

  .genesis-text {
    width: unset;
    font-size: var(--medium-small);
  }

  .genesis-big-text {
    padding-top: 0.25em;
    width: 100%;
    grid-row: span 2;
    text-align: right;
    align-self: start;
    justify-self: end;
  }

  .genesis-text-container {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(2, minmax(200px, max-content));
    column-gap: 1.25em;
  }

  .research-questions .subsection-grid {
    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
    width: 100%;
  }

  .question-category {
    justify-self: center;
  }

  .emerging-focus .subsection-grid {
    margin-inline: auto;
  }

  .research-questions .subsection-grid {
    margin-inline: auto;
  }
}

@media screen and (max-width: 980px) {
  .question-category {
    justify-self: center;
  }

  .emerging-focus .subsection-grid {
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    row-gap: 4em;
    width: 80%;
    margin-inline: auto;
  }

  .emerging-focus p {
    width: 72%;
    min-width: 320px;
    max-width: 60ch;
  }

  .emerging-focus img {
    width: 25%;
  }
}

@media (min-width: 620px) and (max-width: 948px) {
  .last-question {
    grid-column: span 2;
    width: 50%;
  }
}

@media screen and (max-width: 790px) {
  .genesis-text-container {
    grid-template-columns: unset;
  }

  .genesis-big-text {
    text-align: left;
    width: 80%;
    justify-self: start;
  }
}

@media screen and (max-width: 737px) {
  .approach-content span {
    display: none;
  }

  .approach-content {
    grid-template-columns: unset;
  }

  .approach-text-container {
    display: grid;
    grid-template-columns: repeat(2, minmax(200px, 1fr));
    column-gap: 1em;
    width: 100%;
    direction: rtl;
  }

  .approach-container h4 {
    width: unset;
    min-width: unset;
    text-align: left;
    justify-self: end;
    padding-right: 2em;
  }

  .approach-content p {
    max-width: unset;
    text-align: right;
    justify-self: end;
    padding-left: 2em;
    unicode-bidi: plaintext;
    text-wrap: balance;
  }
}

@media screen and (max-width: 613px) {
  .emerging-focus .subsection-grid {
    width: unset;
  }

  .approach-text-container {
    display: unset;
  }

  .approach-content h4 {
    padding: unset;
    padding-bottom: 0.25em;
  }

  .approach-container p {
    text-align: unset;
    padding: unset;
  }

  .takeaways-container ul {
    list-style: none;
    text-indent: 1ch;
  }

  .takeaways-container li::before {
    content: "->";
    font-weight: 900;
    position: relative;
    left: -5px;
  }
}

@media screen and (max-width: 538px) {
  .genesis-content {
    grid-template-columns: unset;
  }
}

@media screen and (max-width: 2400px) {
  .p1-container {
    padding-inline: 6vw;
  }
}

